<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="50dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnB1"
        android:text="@string/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnB2"
        android:text="@string/b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnB3"
        android:text="@string/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnB4"
        android:text="@string/b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>