<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bai4Activity">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginLeft="16dp"
            android:textSize="18sp"
            android:text="@string/TitleB4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="number"
            android:id="@+id/edtTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRun"
        android:text="@string/btnRun"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/tvResult"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>